work towards about:passwords ui - use twitter bootstrap - tweaking strength score, playing around with dictionary detection - new overall score for password security

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "author": "",
     "version": "0.1",
     "fullName": "Password Alerts",
-    "id": "jid1-CIrfOtfTSY2KrQ",
+    "id": "watchdog-password-alerts",
     "description": "a basic add-on"
 }
