--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "version": "0.1",
     "fullName": "Password Alerts",
     "id": "watchdog-password-alerts",
-    "description": "a basic add-on"
+    "description": "a basic add-on",
+    "permissions": {
+      "unsafe-content-script": true
+    }
 }
